--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "form-faq",
+  "version": "1.0.0",
+  "description": "Form FAQ with file upload functionality",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
